<resources>
    <string name="app_name">prac2</string>
    <string name="fragment_1">ПЕРВЫЙ ФРАГМЕНТ</string>
    <string name="fragment_2">ВТОРОЙ ФРАГМЕНТ</string>
    <string name="fragment_3">ТРЕТИЙ ФРАГМЕНТ</string>
    <string name="transaction">Транзакция</string>
    <string name="navigation_api">Navigation API</string>
    <string name="description_text">Таймер в секундах</string>
    <string name="enter_time_in_seconds">Введите время (в секундах)</string>
    <string name="start">Запустить</string>
    <string name="stop">Остановить</string>
    <string name="_0">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>